--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -113,6 +113,12 @@ header {
   }
 }
 
+.blog {
+  position: relative;
+  top: 50%;
+  text-align: center;
+}
+
 .blog-post {
   font-family: 'Montserrat';
   margin: 2rem auto;
