Use helmet to change the metadata for the page

--- a/src/stylesheets/_resume.scss
+++ b/src/stylesheets/_resume.scss
@@ -299,3 +299,13 @@
     }
   }
 }
+
+@media print {
+  .resume .jobs .job .job-content {
+    display: block;
+  }
+
+  .resume .jobs .job .job-header .job-toggle {
+    display: none;
+  }
+}
