Blog: add manifest to display home page

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -10,6 +10,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Material+Icons+Outlined');
 @import url('https://pro.fontawesome.com/releases/v5.10.0/css/all.css');
 @import 'resume';
+@import 'blog';
 
 $header-link-color: #333;
 $header-link-active-color: rgb(250, 183, 58);
