--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -11,6 +11,7 @@
 @import url('https://pro.fontawesome.com/releases/v5.10.0/css/all.css');
 @import 'resume';
 @import 'blog';
+@import 'projects';
 
 $header-link-color: #333;
 $header-link-active-color: rgb(250, 183, 58);
