--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,18 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: 'Syncopate';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Syncopate Regular'), local('Syncopate-Regular'), url(https://fonts.gstatic.com/s/syncopate/v11/pe0sMIuPIYBCpEV5eFdCBfe_.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+@import '../../node_modules/@fontsource/roboto/300.css';
+@import '../../node_modules/@fontsource/roboto/400.css';
+@import '../../node_modules/@fontsource/roboto/500.css';
+@import '../../node_modules/@fontsource/roboto/700.css';
+@import '../../node_modules/@fontsource/syncopate/400.css';
+@import '../../node_modules/@fontsource/syncopate/700.css';
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Material+Icons+Outlined');
-@import url('https://pro.fontawesome.com/releases/v5.10.0/css/all.css');
-@import 'resume';
 @import 'blog';
 @import 'projects';
 
