properly install montserrat font

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,11 @@
 @import '../../node_modules/@fontsource/roboto/700.css';
 @import '../../node_modules/@fontsource/syncopate/400.css';
 @import '../../node_modules/@fontsource/syncopate/700.css';
+@import '../../node_modules/@fontsource/montserrat/100.css';
+@import '../../node_modules/@fontsource/montserrat/200.css';
+@import '../../node_modules/@fontsource/montserrat/300.css';
+@import '../../node_modules/@fontsource/montserrat/400.css';
+@import '../../node_modules/@fontsource/montserrat/500.css';
+@import '../../node_modules/@fontsource/montserrat/600.css';
+@import '../../node_modules/@fontsource/montserrat/700.css';
+@import '../../node_modules/@fontsource/montserrat/800.css';
